--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "mongoose": "^6.10.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.7",
     "nodemailer-smtp-transport": "^2.7.4",
     "nodemon": "^3.0.1",
+    "pdf-parse": "^1.1.1",
+    "pdfkit": "^0.14.0",
     "sharp": "^0.32.6"
   }
 }
